# kumiho-apps

./: LICENSE  README.md  RELEASING.md
.github/workflows/: asset-browser-release.yml  ingest-studio-release.yml
asset-browser/: README.md  pubspec.yaml
asset-browser/docs/: PRD.md  RELEASE_NOTES_v1.0.1.md
asset-browser/macos/: Podfile
asset-browser/scripts/: build_production.ps1  build_production.sh  build_windows_installer.ps1  package_linux.sh  regenerate_icons.py
asset-browser/tool/: cleanup_probe.dart  grpc_probe.dart  grpc_probe_refresh.dart
blog/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
blog/app/: layout.tsx  page.tsx
blog/components/: BlogPostCard.tsx  Header.tsx  LoginModal.tsx  PostActions.tsx
blog/context/: AuthContext.tsx
blog/lib/: firebase.ts  kumiho-api.ts  types.ts
ingest/: .gitignore  AGENT.md  BUILD.md  PLATFORM_COMPATIBILITY.md  README.md  build-linux.sh  build-macos.sh  build-windows.ps1
ingest/apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ingest/apps/desktop-tauri/src-tauri/capabilities/: main.json
ingest/apps/desktop-tauri/src-tauri/icons/: icon.icns
ingest/apps/desktop-tauri/src-tauri/permissions/: app.toml
ingest/apps/desktop-tauri/src-tauri/src/: commands.rs  main.rs  python_env.rs
ingest/python/: README.md
ingest/scripts/: fetch-python-standalone.sh
ingest/worker/: browse.py  image_metadata.py  (+6 more)
install/: asset-browser.ps1  asset-browser.sh  ingest-studio.ps1  ingest-studio.sh
kumiho-browser/: .gitignore  CHANGELOG.md  analysis_options.yaml  pubspec.yaml
(+144 files in other folders)
