[package]
name = "kumiho-ingest-desktop"
version = "0.1.0"
description = "Kumiho Ingest Studio desktop shell"
authors = ["Kumiho"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
